Archive2/af/26813216c35687/output
main.cpp:10:5: error: ambiguous conversion for static_cast from 'foo<std::complex<double> >' to 'std::complex<double>'
    static_cast<std::complex<double>>(foo<std::complex<double>>{});
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/complex:1193:12: note: candidate is the implicit move constructor
    struct complex<double>
           ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/complex:1193:12: note: candidate is the implicit copy constructor
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/complex:1198:26: note: candidate constructor
      _GLIBCXX_CONSTEXPR complex(_ComplexT __z) : _M_value(__z) { }
                         ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/complex:1200:26: note: candidate constructor
      _GLIBCXX_CONSTEXPR complex(double __r = 0.0, double __i = 0.0)
                         ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/complex:1210:26: note: candidate constructor
      _GLIBCXX_CONSTEXPR complex(const complex<float>& __z)
                         ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/complex:1503:20: note: candidate constructor
  complex<double>::complex(const complex<long double>& __z)
                   ^
1 error generated.
